--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 *configuration.php
 *configuration.php-dist
+*CHANGELOG.php
+*COPYRIGHT.php
+*CREDITS.php
+*INSTALL.php
+*LICENSE.php
+*LICENSES.php
+*htaccess.txt
+*logs/
+*tmp/
 *cache/
+
